--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
   <body>
     <h1>💗 Welcome To My First Website Guyzz 💗</h1>
     <p>Yeh Meri Pahli Website hai Jo Maine Banayi hai 😎✨</p>
-    <p> With The Help Of Snahil Sir And My Partner Chatgpt 💛</p>
+    <p> With The Help Of Snehil Sir And My Partner Chatgpt 💛</p>
     <p>   Created by Suhani ❤</p>
     </body>
+
     </html>
