--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
     <h1>💗 Welcome To My First Website Guyzz 💗</h1>
     <p>Yeh Meri Pahli Website hai Jo Maine Banayi hai 😎✨</p>
     <p> With The Help Of Snehil Sir And My Partner Chatgpt 💛</p>
-    <p>  Created by Suhani ❤</p>
-  </body>
-</html>
+    <p>  Made on 29 August 2025 </p>
+    <p> Created By Suhani Bharti<p/>
+    </body>
+   </html>
+
 
 
 
